GUI: mux: option for using first input file's directory as base for destination
Implements #3512.

--- a/src/mkvtoolnix-gui/forms/main_window/preferences_dialog.ui
+++ b/src/mkvtoolnix-gui/forms/main_window/preferences_dialog.ui
@@ -1557,6 +1557,13 @@
             </widget>
            </item>
            <item>
+            <widget class="QCheckBox" name="cbMAutoSetDestinationFromDirectory">
+             <property name="text">
+              <string>Use the input file's &amp;directory name instead of the file name</string>
+             </property>
+            </widget>
+           </item>
+           <item>
             <widget class="QGroupBox" name="gbMAutoSetDestinationDirectory">
              <property name="title">
               <string>Destination directory</string>
@@ -2686,6 +2693,7 @@
   <tabstop>cbMAutoSetDestinationFileName</tabstop>
   <tabstop>cbMAutoSetDestinationOnlyForVideoFiles</tabstop>
   <tabstop>cbMAutoSetDestinationFromTitle</tabstop>
+  <tabstop>cbMAutoSetDestinationFromDirectory</tabstop>
   <tabstop>rbMAutoSetDestinationSameDirectory</tabstop>
   <tabstop>rbMAutoSetDestinationPreviousDirectory</tabstop>
   <tabstop>rbMAutoSetDestinationRelativeDirectory</tabstop>
