deb packaging: build with Qt6 on Debian 12

--- a/packaging/debian/control.erb
+++ b/packaging/debian/control.erb
@@ -1,4 +1,4 @@
-<% use_qt6 = (distro == 'ubuntu') && (version >= Gem::Version.new('22.04')) %>
+<% use_qt6 = ((distro == 'ubuntu') && (version >= Gem::Version.new('22.04'))) || ((distro == 'debian') && (version >= Gem::Version.new('12'))) %>
 Source: mkvtoolnix
 Section: video
 Priority: optional
