GUI: system info: add function for saving to a text file
Useful for debugging issues with themes such as #3528.

--- a/src/mkvtoolnix-gui/forms/util/text_display_dialog.ui
+++ b/src/mkvtoolnix-gui/forms/util/text_display_dialog.ui
@@ -47,9 +47,22 @@ p, li { white-space: pre-wrap; }
       </spacer>
      </item>
      <item>
+      <widget class="QPushButton" name="pbSave">
+       <property name="text">
+        <string>&amp;Save</string>
+       </property>
+       <property name="autoDefault">
+        <bool>false</bool>
+       </property>
+      </widget>
+     </item>
+     <item>
       <widget class="QPushButton" name="pbCopyToClipboard">
        <property name="text">
         <string>C&amp;opy to clipboard</string>
+       </property>
+       <property name="autoDefault">
+        <bool>false</bool>
        </property>
       </widget>
      </item>
