GUI: add "force legacy dark mode" option on Windows 11
Due to a bug in Qt 6.5.0 the dark palette will not be enabled on
certain installations. For those situations a new option was added to
the preferences called "Force the use of the legacy dark palette"
which forces MKVToolNix GUI to use the legacy dark palette, no matter
what Windows 11's application color mode is set to. This option will
be removed once the bug in Qt has been fixed.

This is a workaround for #3528.

--- a/src/mkvtoolnix-gui/forms/main_window/preferences_dialog.ui
+++ b/src/mkvtoolnix-gui/forms/main_window/preferences_dialog.ui
@@ -168,6 +168,13 @@
             </widget>
            </item>
            <item>
+            <widget class="QCheckBox" name="cbGuiForceLegacyDarkPalette">
+             <property name="text">
+              <string>Force the use of the legacy &amp;dark palette</string>
+             </property>
+            </widget>
+           </item>
+           <item>
             <widget class="QCheckBox" name="cbGuiDisableToolTips">
              <property name="text">
               <string>Disable &amp;tooltips</string>
@@ -2619,6 +2626,7 @@
   <tabstop>sbGuiNumRecentlyUsedStrings</tabstop>
   <tabstop>cbGuiStayOnTop</tabstop>
   <tabstop>cbGuiDisableHighDPIScaling</tabstop>
+  <tabstop>cbGuiForceLegacyDarkPalette</tabstop>
   <tabstop>cbGuiDisableToolTips</tabstop>
   <tabstop>cbGuiCheckForUpdates</tabstop>
   <tabstop>cbGuiUseLegacyFontMIMETypes</tabstop>
