GUI: merge: optionally ensure at least one track of each type is enabled
The GUI will now check the state of the 'track enabled' flag of all
video, audio & subtitle tracks when starting to multiplex or adding a
job to the job queue. If there's no track with its flag turned on for
a type, the GUI will turn on the flag for the first track of the
type.

This behavior can be turned off in the preferences.

Implements #3535.

--- a/src/mkvtoolnix-gui/forms/main_window/preferences_dialog.ui
+++ b/src/mkvtoolnix-gui/forms/main_window/preferences_dialog.ui
@@ -738,6 +738,13 @@
              </item>
             </layout>
            </item>
+           <item>
+            <widget class="QCheckBox" name="cbMEnsureAtLeastOneTrackEnabled">
+             <property name="text">
+              <string>&amp;Ensure at least one track of each type has its &quot;track enabled&quot; flag set</string>
+             </property>
+            </widget>
+           </item>
           </layout>
          </widget>
         </item>
@@ -2711,6 +2718,7 @@
   <tabstop>cbMProbeRangePercentage</tabstop>
   <tabstop>leMMediaInfoExe</tabstop>
   <tabstop>pbMBrowseMediaInfoExe</tabstop>
+  <tabstop>cbMEnsureAtLeastOneTrackEnabled</tabstop>
   <tabstop>cbMAddingAppendingFilesPolicy</tabstop>
   <tabstop>cbMDragAndDropFilesPolicy</tabstop>
   <tabstop>cbMDragAndDropDirectoriesPolicy</tabstop>
