change title & URL of support forum to help.mkvtoolnix.download

--- a/src/mkvtoolnix-gui/forms/main_window/main_window.ui
+++ b/src/mkvtoolnix-gui/forms/main_window/main_window.ui
@@ -218,7 +218,7 @@
      <string notr="true">&amp;Help</string>
     </property>
     <addaction name="actionHelpMkvmergeDocumentation"/>
-    <addaction name="actionHelpForumSubReddit"/>
+    <addaction name="actionHelpForum"/>
     <addaction name="actionHelpFAQ"/>
     <addaction name="actionHelpKnownProblems"/>
     <addaction name="actionHelpReportBug"/>
@@ -641,12 +641,12 @@
     <string>MKVToolNix &amp;web site</string>
    </property>
   </action>
-  <action name="actionHelpForumSubReddit">
+  <action name="actionHelpForum">
    <property name="icon">
     <iconset theme="applications-internet"/>
    </property>
    <property name="text">
-    <string>User forum/sub-&amp;Reddit</string>
+    <string>Community &amp;&amp; &amp;help forum</string>
    </property>
   </action>
   <action name="actionHelpFAQ">
