--- a/src/mkvtoolnix-gui/forms/merge/tab.ui
+++ b/src/mkvtoolnix-gui/forms/merge/tab.ui
@@ -855,7 +855,11 @@
                        </widget>
                       </item>
                       <item row="5" column="1">
-                       <widget class="QComboBox" name="stereoscopy"/>
+                       <widget class="QComboBox" name="stereoscopy">
+                        <property name="sizeAdjustPolicy">
+                         <enum>QComboBox::AdjustToMinimumContentsLengthWithIcon</enum>
+                        </property>
+                       </widget>
                       </item>
                       <item row="3" column="0">
                        <widget class="QLabel" name="croppingLabel">
@@ -1201,7 +1205,17 @@
                          </widget>
                         </item>
                         <item row="1" column="1">
-                         <widget class="QComboBox" name="audioEmphasis"/>
+                         <widget class="QComboBox" name="audioEmphasis">
+                          <property name="sizePolicy">
+                           <sizepolicy hsizetype="MinimumExpanding" vsizetype="Fixed">
+                            <horstretch>0</horstretch>
+                            <verstretch>0</verstretch>
+                           </sizepolicy>
+                          </property>
+                          <property name="sizeAdjustPolicy">
+                           <enum>QComboBox::AdjustToMinimumContentsLengthWithIcon</enum>
+                          </property>
+                         </widget>
                         </item>
                        </layout>
                       </item>
