GUI: preferences: adjust description of "forced display" flag for subs from file names

--- a/src/mkvtoolnix-gui/forms/main_window/preferences_dialog.ui
+++ b/src/mkvtoolnix-gui/forms/main_window/preferences_dialog.ui
@@ -1324,7 +1324,7 @@
              <item row="0" column="0">
               <widget class="QCheckBox" name="cbMForcedDisplayFlagSubtitles">
                <property name="text">
-                <string>Set &quot;forced display&quot; flag for subtitles whose file names match:</string>
+                <string>Derive &quot;forced display&quot; fla&amp;g for subtitles from file names:</string>
                </property>
               </widget>
              </item>
