--- a/src/mkvtoolnix-gui/forms/merge/select_playlist_dialog.ui
+++ b/src/mkvtoolnix-gui/forms/merge/select_playlist_dialog.ui
@@ -220,6 +220,11 @@
                    <string>Language</string>
                   </property>
                  </column>
+                 <column>
+                  <property name="text">
+                   <string>Properties</string>
+                  </property>
+                 </column>
                 </widget>
                </item>
               </layout>
